--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        </nav>
+    </header>
 </body>
 <script src="assets/bootstrap-5.1.1/js/bootstrap.js"></script>
 </html>
